--- a/index.css
+++ b/index.css
@@ -80,9 +80,47 @@ h2 {
 
 .portfolio-item img {
   width: 100%;
-  max-width: 300px;
+  max-width: 100px;
   height: auto;
   margin-bottom: 10px;
+}
+
+#plano_exclusivo {
+  display: flex;
+  justify-content: center;
+}
+
+.elegant-background {
+  background-color: #d6d5d5;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.elegant-background h4 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 0;
+}
+
+.elegant-background ul {
+  list-style-type: none;
+  padding-left: 20px;
+}
+
+.elegant-background ul li {
+  position: relative;
+  padding-left: 20px;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.elegant-background ul li:before {
+  content: '\2022';
+  position: absolute;
+  left: 0;
+  color: #FF6B6B;
+  font-size: 14px;
 }
 
 footer {
