--- a/index.css
+++ b/index.css
@@ -60,6 +60,7 @@ h2 {
 
 .servico {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   margin-bottom: 20px;
 }
@@ -69,13 +70,22 @@ h2 {
 }
 
 .portfolio-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
   gap: 20px;
+  justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+  .portfolio-grid {
+    flex-wrap: wrap;
+  }
 }
 
 .portfolio-item {
   text-align: center;
+  width: 300px;
 }
 
 .portfolio-item img {
@@ -166,11 +176,11 @@ footer {
 
 .btn_texto {
   text-decoration: none;
-  color: rgb(189, 123, 0);
+  color: #0074FF;
 }
 
 .btn_texto:hover {
-  color: rgb(156, 102, 0);
+  color: #0958b9;
 }
 
 form {
@@ -225,7 +235,7 @@ button:hover {
 #home {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 #home .texto_home h2 strong {
