feat: adicionado tabela e icones dos planos

--- a/estilos/servicos.css
+++ b/estilos/servicos.css
@@ -300,12 +300,12 @@ button:hover {
   font-weight: bold;
 }
 
-.table-cell img {
+.adicional {
   height: 50px;
   width: 50px;
 }
 
 #table-cell-text {
   text-align: left;
-
+  padding-left: 10px;
 }
