--- a/estilos/servicos.css
+++ b/estilos/servicos.css
@@ -40,7 +40,8 @@ nav {
 }
 
 main {
-  padding: 40px;
+  padding: 40px auto;
+  margin: 40px 0px;
 }
 
 section {
@@ -275,12 +276,20 @@ button:hover {
   display: table-cell;
   border: 1px solid #ccc;
   padding: 10px 0px;
+  width: 50px;
+}
+
+.table-cell-servico {
+  display: table-cell;
+  border: 1px solid #ccc;
+  padding: 10px 0px;
+
 }
 
 .table-cell-valor {
   display: table-cell;
   border: 1px solid #ccc;
-  padding: 10px;
+  padding: 3px;
   text-align: center;
 }
 
