refacture: Ajustado parcialmente responsividade de planos

--- a/estilos/planos.css
+++ b/estilos/planos.css
@@ -78,75 +78,17 @@ h2 {
   justify-content: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 480px) {
   .portfolio-grid {
     flex-wrap: wrap;
   }
 
-  .comparison-table {
-    display: table;
-    width: 100%;
-    border-collapse: collapse;
-    margin: 0px auto;
+  .table-cell, #table-cell-text, .table-cell-servico  {
+    font-size: 10px;
   }
-  
-  .table-row {
-    display: table-row;
-  }
-  
-  .table-row-compre {
-    display: table-row;
-  }
-  
-  .table-cell {
-    display: table-cell;
-    border: 1px solid #ccc;
-    padding: 0px;
-    width: 0px;
-  }
-  
-  .table-cell-servico {
-    display: table-cell;
-    border: 1px solid #ccc;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .table-cell-valor {
-    display: table-cell;
-    border: 1px solid #ccc;
-    padding: 0px;
-    text-align: center;
-  }
-  
+
   .table-cell-compre {
-    display: table-cell;
-  
-    text-align: center;
-  }
-  
-  .table-cell:first-child {
-    font-weight: bold;
-  }
-  
-  /* Estilos específicos para a primeira linha (cabeçalho) */
-  .table-row:first-child {
-    background-color: #f2f2f2;
-    font-weight: bold;
-  }
-  
-  /* Estilize a célula "x" como desejado */
-  .table-cell {
-    text-align: center;
-    font-weight: bold;
-  }
-  
-  #table-cell-text {
-    text-align: left;
-    padding-left: 0px;
-    justify-content: center;
-    align-items: center;
+    font-size: 12px;
   }
 }
 
@@ -160,11 +102,6 @@ h2 {
   max-width: 100px;
   height: auto;
   margin-bottom: 10px;
-}
-
-#plano_exclusivo {
-  display: flex;
-  justify-content: center;
 }
 
 .elegant-background {
@@ -277,6 +214,7 @@ footer {
   padding: 7px 2px;
   border-radius: 5px;
   text-decoration: none;
+
 }
 
 #btn_contato_compre:hover {
@@ -298,25 +236,6 @@ button:hover {
   background-color: #000;
 }
 
-.slideshow {
-  width: 450px;
-  height: 300px;
-  overflow: hidden;
-  border-radius: 20px;
-  margin: 10px;
-  justify-content: right;
-}
-
-.slide {
-  width: 100%;
-  height: 100%;
-  display: none;
-}
-
-.slide.active {
-  display: block;
-}
-
 #home {
   display: flex;
   flex-wrap: wrap;
@@ -327,7 +246,7 @@ button:hover {
   color: #0074FF;
 }
 
-.texto_home{
+.texto_home {
   width: 550px;
   height: 300px;
 }
@@ -351,15 +270,10 @@ button:hover {
   display: table-row;
 }
 
-.table-row-compre {
-  display: table-row;
-}
-
 .table-cell {
   display: table-cell;
   border: 1px solid #ccc;
   padding: 10px 2px;
-  width: 50px;
 }
 
 .table-cell-servico {
@@ -379,8 +293,6 @@ button:hover {
 
 .table-cell-compre {
   display: table-cell;
-
-  text-align: center;
 }
 
 .table-cell:first-child {
@@ -409,4 +321,5 @@ button:hover {
   padding-left: 10px;
   justify-content: center;
   align-items: center;
+
 }
