--- a/estilos/planos.css
+++ b/estilos/planos.css
@@ -39,6 +39,13 @@ nav {
   font-weight: bold;
 }
 
+.menu>li>a:hover {
+  padding: 5px;
+  background-color: #888888;
+  border: white 1px solid;
+  border-radius: 5px;
+}
+
 main {
   padding: 40px auto;
   margin: 40px 0px;
@@ -162,6 +169,13 @@ footer {
 .footer-menu li a {
   text-decoration: none;
   color: #fff;
+}
+
+.footer-menu>li>a:hover {
+  padding: 5px;
+  background-color: #888888;
+  border: white 1px solid;
+  border-radius: 5px;
 }
 
 .direitos {
