--- a/estilos/index.css
+++ b/estilos/index.css
@@ -241,6 +241,15 @@ button:hover {
   justify-content: right;
 }
 
+.slideshow_clientes {
+  width: 551px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 20px;
+  margin: 10px;
+  justify-content: right;
+}
+
 .slide {
   width: 100%;
   height: 100%;
