--- a/estilos/index.css
+++ b/estilos/index.css
@@ -241,15 +241,6 @@ button:hover {
   justify-content: right;
 }
 
-.slideshow_clientes {
-  width: 551px;
-  height: 300px;
-  overflow: hidden;
-  border-radius: 20px;
-  margin: 10px;
-  justify-content: right;
-}
-
 .slide {
   width: 100%;
   height: 100%;
@@ -257,6 +248,33 @@ button:hover {
 }
 
 .slide.active {
+  display: block;
+}
+
+#clientes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.slideshow_clientes {
+  width: 551px;
+  height: 300px;
+  overflow: hidden;
+  border-radius: 10px;
+  margin: 10px;
+  justify-content: right;
+  border: #333 solid 1px;
+  box-shadow: 1px 1px 1px black;
+}
+
+.slide_cliente {
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+
+.slide_cliente.active {
   display: block;
 }
 
