--- a/estilos/index.css
+++ b/estilos/index.css
@@ -327,3 +327,72 @@ button:hover {
   width: 550px;
 
 }
+
+
+
+
+
+
+
+.dark {
+  background-color: #333;
+  color: #fff;
+  padding: 40px;
+}
+
+h1.center {
+  text-align: center;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  overflow: hidden;
+}
+
+.logo-carousel {
+  display: flex;
+  animation: carousel-slide 10s infinite;
+}
+
+@keyframes carousel-slide {
+  0% {
+    transform: translateX(0);
+  }
+  16.666% {
+    transform: translateX(-15%);
+  }
+  33.333% {
+    transform: translateX(-30%);
+  }
+  50% {
+    transform: translateX(-45%);
+  }
+  66.666% {
+    transform: translateX(-60%);
+  }
+  83.333% {
+    transform: translateX(-75%);
+  }
+  100% {
+    transform: translateX(-90%);
+  }
+}
+
+.logo-slide {
+  flex: 0 0 25%;
+  max-width: 25%;
+  padding: 0 10px;
+}
+
+.logo-image {
+  height: 75px;
+  filter: grayscale(100%);
+  transition: filter 0.3s;
+}
+
+.logo-image:hover {
+  filter: none;
+}
